--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                   name="description"
                   content="Madeleine is an aspiring webdeveloper who loves develop websites"
             />
+            <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
 
             <link rel="stylesheet" href="reset.css" />
             <link rel="stylesheet" href="main.css" />
@@ -17,7 +18,7 @@
             <header class="contentWrap header">
                   <h1>Madeleine Gustavsson - Web developer</h1>
                   <a href="https://madeleineportfolio.com"
-                        ><img src="logo.png" alt="Logo of the name Madeleine" class="headerLogo"
+                        ><img src="assets/logo.png" alt="Logo of the name Madeleine" class="headerLogo"
                   /></a>
                   <nav>
                         <ul>
@@ -582,7 +583,7 @@
 
             <footer>
                   <a href="https://madeleineportfolio.com"
-                        ><img src="logoTransparent.png" alt="Logo of the name Madeleine"
+                        ><img src="assets/logoTransparent.png" alt="Logo of the name Madeleine"
                   /></a>
 
                   <p>
