--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                                 >
                                           </h4>
                                           <h5 class="experienceListHeadingText">
-                                                Univeristy preparing program
+                                                University preparing program
                                           </h5>
                                     </div>
                                     <p class="experienceListText">
