--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <header>
                   <div class="header">
                         <h1>Madeleine Gustavsson - Web developer</h1>
-                        <a href="https://madeleineportfolio.com"
+                        <a
+                              href="https://madeleineportfolio.com"
+                              title="Homepage"
+                              aria-current="page"
                               ><img
                                     src="assets/logo.png"
                                     alt="Logo with text 'Madeleine.'"
@@ -36,7 +39,7 @@
                               <ul class="navList">
                                     <li>
                                           <a
-                                                href="portfolio.html"
+                                                href="https://madeleineportfolio.com/portfolio.html"
                                                 class="navText"
                                                 onclick="closeMenuLink();"
                                                 title="See Madeleine's projects"
@@ -45,7 +48,8 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="#aboutMeLink"
+                                                href="https://madeleineportfolio.com#aboutMeLink"
+                                                aria-current="page"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Read more about Madeleine"
@@ -54,7 +58,8 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="#contactMeLink"
+                                                href="https://madeleineportfolio.com#contactMeLink"
+                                                aria-current="page"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Contact me. "
@@ -63,7 +68,8 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="#experienceLink"
+                                                href="https://madeleineportfolio.com#experienceLink"
+                                                aria-current="page"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Read about Madeleine's experience"
@@ -380,7 +386,7 @@
 
             <!--        FOOTER START      -->
             <footer class="footer">
-                  <a href="https://madeleineportfolio.com" title="Homepage"
+                  <a href="https://madeleineportfolio.com" title="Homepage" aria-current="page"
                         ><img
                               src="assets/logoTransparent.png"
                               alt="Logo of the name Madeleine"
@@ -392,6 +398,7 @@
                               >&copy; 2023
                               <a
                                     href="https://madeleineportfolio.com"
+                                    aria-current="page"
                                     class="footerLink"
                                     title="Homepage"
                                     >madeleineportfolio.com</a
