--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,10 @@
             <header>
                   <div class="header">
                         <h1>Madeleine Gustavsson - Web developer</h1>
-                        <a href="https://madeleineportfolio.com"
+                        <a
+                              href="https://madeleineportfolio.com"
+                              title="Homepage"
+                              aria-current="page"
                               ><img
                                     src="assets/logo.png"
                                     alt="Logo with the name Madeleine."
@@ -42,7 +45,8 @@
                               <ul class="navList">
                                     <li>
                                           <a
-                                                href="portfolio.html"
+                                                href="https://madeleineportfolio.com/portfolio.html"
+                                                aria-current="page"
                                                 class="navText"
                                                 onclick="closeMenuLink();"
                                                 title="See Madeleine's projects"
@@ -51,7 +55,7 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="index.html#aboutMeLink"
+                                                href="https://madeleineportfolio.com#aboutMeLink"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Read more about Madeleine"
@@ -60,7 +64,7 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="index.html#contactMeLink"
+                                                href="https://madeleineportfolio.com#contactMeLink"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Contact me. "
@@ -69,7 +73,7 @@
                                     </li>
                                     <li>
                                           <a
-                                                href="index.html#experienceLink"
+                                                href="https://madeleineportfolio.com#experienceLink"
                                                 class="navText paddingLeft2vw"
                                                 onclick="closeMenuLink();"
                                                 title="Read about Madeleine's experience"
@@ -151,7 +155,7 @@
                                           shows the data to the user.
                                     </p>
                                     <a
-                                          href="https://madeleineportfolio.com/DumbledoresScarServices/#/"
+                                          href="https://madeleineportfolio.com/DumbledoresScarServices/"
                                           class="projectLink"
                                           title="To Dumbledore's Scar Services"
                                           >To the DS-website</a
